Update отчёт лаб 4.md

--- a/отчёт лаб 4.md
+++ b/отчёт лаб 4.md
@@ -1,1 +1,130 @@
+# Лабораторный отчет 4
+
+**ФИО:**  - К3140
+
+## Выполнение лабораторной работы 4
+
+### Установка Docker и проверка версии
+Чтобы проверить текущую версию Docker, используйте команду:
+```bash
+docker --version
+```
+Docker установлен успешно.
+
+---
+
+### Создание Dockerfile
+
+1. Создайте пустой файл с именем `Dockerfile`:
+   ```bash
+   touch Dockerfile
+   ```
+
+2. Дайте этому файлу права на выполнение:
+   ```bash
+   chmod +x Dockerfile
+   ```
+
+3. Чтобы проверить права на выполнение файла, используйте следующую команду:
+   ```bash
+   ls -l Dockerfile
+   ```
+
+4. Затем используйте `gedit` для записи в `Dockerfile` следующим образом:
+
+   Эти строки кода помогают создать контейнер на основе последней версии операционной системы Ubuntu и установить необходимые пакеты для запуска приложений `aafire` и `ping`.
+
+---
+
+### Построение Docker image
+
+1. После создания `Dockerfile`, соберите образ с помощью команды:
+   ```bash
+   sudo docker build -t aafire .
+   ```
+
+2. Используйте команду для проверки созданных образов Docker:
+   ```bash
+   sudo docker images
+   ```
+
+---
+
+### Запуск контейнеров
+
+1. После того как образ был собран, запустите два контейнера с приложением `aafire`:
+   ```bash
+   docker run -it --name container1 aafire
+   docker run -it --name container2 aafire
+   ```
+
+2. Это результат работы двух контейнеров:
+   - `container1`
+   - `container2`
+
+---
+
+### Создание сети
+
+1. Используйте команду для проверки запущенных контейнеров:
+   ```bash
+   sudo docker ps
+   ```
+
+2. Создайте сеть Docker с именем `myNetwork`:
+   ```bash
+   sudo docker network create myNetwork
+   ```
+
+3. Подключите контейнеры `container1` и `container2` к сети `myNetwork`:
+   ```bash
+   sudo docker network connect myNetwork container1
+   sudo docker network connect myNetwork container2
+   ```
+
+4. Проверьте настройки сети с помощью команды:
+   ```bash
+   sudo docker network inspect myNetwork
+   ```
+
+`container1` и `container2` успешно подключились к `myNetwork`.
+
+---
+
+### Проверка соединения между контейнерами
+
+1. Проверьте соединение между двумя контейнерами с помощью команды `ping`.
+   
+2. Войдите в `container1` с помощью команды:
+   ```bash
+   sudo docker exec -it container1 bash
+   ```
+
+3. Выполните `ping`-запрос к `container2`:
+   ```bash
+   ping container2
+   ```
+
+4. Аналогичным образом войдите в `container2` и выполните `ping`-запрос к `container1`:
+   ```bash
+   ping container1
+   ```
+
+Два контейнера успешно соединились.
+
+---
+
+### Завершение работы
+
+1. Прекратите запуск двух контейнеров, чтобы избежать переполнения памяти, с помощью команды:
+   ```bash
+   sudo docker stop container1
+   sudo docker stop container2
+   ```
+
+2. Используйте команду для проверки запущенных контейнеров:
+   ```bash
+   sudo docker ps
+   ```
+
 
