Update отчёт лаб 4.md

--- a/отчёт лаб 4.md
+++ b/отчёт лаб 4.md
@@ -1,6 +1,6 @@
 # Лабораторный отчет 4
 
-**ФИО:**  - К3140
+**ФИО:**  Cyбагто Сатрио- К3140
 
 ## Выполнение лабораторной работы 4
 
@@ -10,6 +10,8 @@
 docker --version
 ```
 Docker установлен успешно.
+
+![WhatsApp Image 2024-12-15 at 15 16 46](https://github.com/user-attachments/assets/8aa440f8-c18c-4c62-92f3-f9fd72fdab72)
 
 ---
 
@@ -29,6 +31,7 @@ Docker установлен успешно.
    ```bash
    ls -l Dockerfile
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45](https://github.com/user-attachments/assets/92f13647-4aa2-4860-a2e8-68448719c161)
 
 4. Затем используйте `gedit` для записи в `Dockerfile` следующим образом:
 
@@ -42,11 +45,13 @@ Docker установлен успешно.
    ```bash
    sudo docker build -t aafire .
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (1)](https://github.com/user-attachments/assets/143632ae-ea18-4661-9988-3f507a9881e0)
 
 2. Используйте команду для проверки созданных образов Docker:
    ```bash
    sudo docker images
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (2)](https://github.com/user-attachments/assets/395d1b1c-0983-4e3d-9aca-213c00cb100c)
 
 ---
 
@@ -54,13 +59,16 @@ Docker установлен успешно.
 
 1. После того как образ был собран, запустите два контейнера с приложением `aafire`:
    ```bash
-   docker run -it --name container1 aafire
+   docker run -it --name container aafire
    docker run -it --name container2 aafire
    ```
 
 2. Это результат работы двух контейнеров:
    - `container1`
+     ![WhatsApp Image 2024-12-15 at 15 16 45 (3)](https://github.com/user-attachments/assets/29abe379-5866-427e-b8d5-e2c9bfb76b89)
+
    - `container2`
+![WhatsApp Image 2024-12-15 at 15 16 45 (4)](https://github.com/user-attachments/assets/9b040c9f-0145-4795-af01-8f3abc71db4c)
 
 ---
 
@@ -70,24 +78,28 @@ Docker установлен успешно.
    ```bash
    sudo docker ps
    ```
+![WhatsApp Image 2024-12-15 at 15 16 46 (1)](https://github.com/user-attachments/assets/93d0cdf3-2cae-4fef-a77f-ba2d3d0b82a3)
 
 2. Создайте сеть Docker с именем `myNetwork`:
    ```bash
    sudo docker network create myNetwork
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (5)](https://github.com/user-attachments/assets/26b14395-d77d-4040-acb5-a6376027a6cb)
 
 3. Подключите контейнеры `container1` и `container2` к сети `myNetwork`:
    ```bash
-   sudo docker network connect myNetwork container1
+   sudo docker network connect myNetwork container
    sudo docker network connect myNetwork container2
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (5)](https://github.com/user-attachments/assets/7b4f87aa-e00f-4c53-beeb-ef9252c16bad)
 
 4. Проверьте настройки сети с помощью команды:
    ```bash
    sudo docker network inspect myNetwork
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (7)](https://github.com/user-attachments/assets/acb4fb0d-05c1-4b3f-80a3-8ab722b202fa)
 
-`container1` и `container2` успешно подключились к `myNetwork`.
+`container` и `container2` успешно подключились к `myNetwork`.
 
 ---
 
@@ -104,11 +116,13 @@ Docker установлен успешно.
    ```bash
    ping container2
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (8)](https://github.com/user-attachments/assets/0c06e597-c487-4ae1-b644-e2423960d4c0)
 
 4. Аналогичным образом войдите в `container2` и выполните `ping`-запрос к `container1`:
    ```bash
    ping container1
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (9)](https://github.com/user-attachments/assets/38718f11-7715-405f-a09c-7f22e72e7802)
 
 Два контейнера успешно соединились.
 
@@ -121,10 +135,12 @@ Docker установлен успешно.
    sudo docker stop container1
    sudo docker stop container2
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (10)](https://github.com/user-attachments/assets/797aa252-9922-4427-a731-a8b14ed4f5dd)
 
 2. Используйте команду для проверки запущенных контейнеров:
    ```bash
    sudo docker ps
    ```
+![WhatsApp Image 2024-12-15 at 15 16 45 (11)](https://github.com/user-attachments/assets/014419d1-908e-437c-bde5-da58842d99f7)
 
 
